fix(pharmcat): support phase sets in lowest function genes